# sv_raid_reader_gui

./: Cargo.toml
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs
src/draw/: central_panel.rs  left_panel.rs  mod.rs
